# snake-extended

./: .gitignore  LICENCE.txt  README.md  mypy.ini  pyproject.toml  requirements.txt
docs/: READMELV.md
sandbox/: pseudocode  ws2.py
snakext/: app.py  communicator.py  logic_controller.py  pygame_interface.py  state.py  view.py
snakext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
snakext/communication/: communicator.py
snakext/facades/: pygame_facade.py
snakext/game/: game.py
snakext/game/logic/: logic_controller.py
snakext/game/state/: state.py  state_types.py
snakext/game/views/: game_view.py  playground.py
snakext/logic/: logic_controller.py
snakext/sandbox/: curses_1.py  module_1.py  module_2.py  np-test.py  test_state.py  ws2.py
snakext/state/: state.py
snakext/utils/: arg_parser.py  game_clock.py  math_.py  matrix.py  pygame_facade.py  pygame_interface.py  vec.py
snakext/views/: composable.py  game_view.py  playground.py
src/snake-extended/: test.py
tests/test_game_view/: test_logic_controller.py  test_pygame_facade.py  test_snake_place.py
