[tool.poetry]
name = "snakext"
version = "0.1.0"
description = "Rewrite of the snake with multiplayer."
authors = ["jorenchik <jorens.stekels@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
websockets = "^12.0"
pygame = "^2.5.2"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
